--- a/config/sync/core-store.plugin_content_manager_configuration_components##block.strengths.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_components##block.strengths.json
@@ -55,7 +55,7 @@
           "placeholder": "",
           "visible": true,
           "editable": true,
-          "mainField": "title"
+          "mainField": "id"
         },
         "list": {
           "label": "strengths",
