--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##case.case.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##case.case.json
@@ -76,6 +76,20 @@
           "sortable": false
         }
       },
+      "isMain": {
+        "edit": {
+          "label": "Показывать на главной",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "isMain",
+          "searchable": true,
+          "sortable": true
+        }
+      },
       "createdAt": {
         "edit": {
           "label": "createdAt",
@@ -128,6 +142,12 @@
         [
           {
             "name": "image",
+            "size": 12
+          }
+        ],
+        [
+          {
+            "name": "isMain",
             "size": 12
           }
         ]
