--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "strapi-plugin-component-preview": "^1.0.9",
     "strapi-plugin-config-sync": "^1.1.2",
     "strapi-plugin-navigation": "^2.2.11",
+    "strapi-plugin-populate-deep": "^2.0.0",
     "strapi-plugin-schemas-to-ts": "^1.1.0",
     "strapi-plugin-slugify": "^2.3.2"
   },
