--- a/config/sync/core-store.plugin_content_manager_configuration_content_types##api##personalnye-dannye.personalnye-dannye.json
+++ b/config/sync/core-store.plugin_content_manager_configuration_content_types##api##personalnye-dannye.personalnye-dannye.json
@@ -1,7 +1,7 @@
 {
-  "key": "plugin_content_manager_configuration_content_types::api::vacancie.vacancie",
+  "key": "plugin_content_manager_configuration_content_types::api::personalnye-dannye.personalnye-dannye",
   "value": {
-    "uid": "api::vacancie.vacancie",
+    "uid": "api::personalnye-dannye.personalnye-dannye",
     "settings": {
       "bulkable": true,
       "filterable": true,
@@ -22,7 +22,7 @@
       },
       "title": {
         "edit": {
-          "label": "Заголовок",
+          "label": "title",
           "description": "",
           "placeholder": "",
           "visible": true,
@@ -34,38 +34,10 @@
           "sortable": true
         }
       },
-      "description": {
-        "edit": {
-          "label": "Описание",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "description",
-          "searchable": true,
-          "sortable": true
-        }
-      },
-      "link": {
-        "edit": {
-          "label": "Ссылка на hh.ru",
-          "description": "",
-          "placeholder": "",
-          "visible": true,
-          "editable": true
-        },
-        "list": {
-          "label": "link",
-          "searchable": true,
-          "sortable": true
-        }
-      },
       "content": {
         "edit": {
-          "label": "Подробное описание",
-          "description": "Не загружать картинки!",
+          "label": "content",
+          "description": "",
           "placeholder": "",
           "visible": true,
           "editable": true
@@ -106,23 +78,17 @@
       }
     },
     "layouts": {
+      "list": [
+        "id",
+        "title",
+        "createdAt",
+        "updatedAt"
+      ],
       "edit": [
         [
           {
             "name": "title",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "description",
-            "size": 12
-          }
-        ],
-        [
-          {
-            "name": "link",
-            "size": 12
+            "size": 6
           }
         ],
         [
@@ -131,12 +97,6 @@
             "size": 12
           }
         ]
-      ],
-      "list": [
-        "id",
-        "title",
-        "description",
-        "link"
       ]
     }
   },
